[package]
authors = ["Polymetric <polymetricofficial@gmail.com>",
           "Łukasz Jan Niemier <lukasz@niemier.pl>",
           "Jeremy Soller <jackpot51@gmail.com>",
           "Ticki <Ticki@users.noreply.github.com>",
           "Michael Murphy <mmstickan@gmail.com>"]
name = "coreutils"
version = "0.1.0"

[dependencies]
anyhow = "1"
arg_parser = { git = "https://gitlab.redox-os.org/redox-os/arg-parser.git" }
extra = { git = "https://gitlab.redox-os.org/redox-os/libextra.git" }
termion = "2.0.3"
filetime = { git = "https://gitlab.redox-os.org/redox-os/filetime.git", branch = "redox" }
redox_users = "0.4.4"
walkdir = "2.2.7"
time = "0.1.42"
base64 = "0.10.1"
num = "0.2.0"
failure = "0.1.5"
failure_derive = "0.1.5"
libredox = "0.0.4"

[dev-dependencies]
proptest = "0.9.2"

[lib]
path = "src/lib.rs"

# Also in uutils
# [[bin]]
# name = "cat"
# path = "src/bin/cat.rs"

[[bin]]
name = "chown"
path = "src/bin/chown.rs"

[[bin]]
name = "clear"
path = "src/bin/clear.rs"

[[bin]]
name = "dd"
path = "src/bin/dd.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "du"
path = "src/bin/du.rs"

[[bin]]
name = "free"
path = "src/bin/free.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

# Also in uutils
# [[bin]]
# name = "ln"
# path = "src/bin/ln.rs"

# Also in uutils
# [[bin]]
# name = "mkdir"
# path = "src/bin/mkdir.rs"

[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "reset"
path = "src/bin/reset.rs"

[[bin]]
name = "shutdown"
path = "src/bin/shutdown.rs"

# Also in uutils
# [[bin]]
# name = "sort"
# path = "src/bin/sort.rs"

#[[bin]]
#name = "stat"
#path = "src/bin/stat.rs"

# Also in uutils
# [[bin]]
# name = "tail"
# path = "src/bin/tail.rs"

# Also in uutils
# [[bin]]
# name = "test"
# path = "src/bin/test.rs"

[[bin]]
name = "time"
path = "src/bin/time.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "uptime"
path = "src/bin/uptime.rs"

[[bin]]
name = "which"
path = "src/bin/which.rs"
